# microsoft-agentic-ai-workshop

./: .gitignore  CLAUDE.md  README.md  changeOfDirection.md  context.MD  context.md  marco.txt  next-phases.md  pc-transfer.txt  progress.md  report.pbix
docs/: 00-setup.md  01-project-setup.md  02-mcp-server.md  03-mcp-tools-extended.md  04-orchestrator-api.md  05-pulumi-infrastructure.md  06-dataverse-setup.md  07-dataverse-integration.md  agents.md  (+11 more)
mcp-server/: .env.example  pyproject.toml
mcp-server/src/enterprise_agentops_mcp/: __init__.py  config.py  server.py
mcp-server/src/enterprise_agentops_mcp/data/: accounts.json  activities.json  agent_runs.json  approvals.json  cases.json  contacts.json  knowledge_articles.json  order_items.json  orders.json  pricing.json  refunds.json  returns.json  shipments.json
mcp-server/src/enterprise_agentops_mcp/models/: __init__.py
mcp-server/src/enterprise_agentops_mcp/services/: __init__.py  azure_search_service.py  dataverse_service.py  mock_data_service.py  service_bus_service.py  telemetry.py
mcp-server/src/enterprise_agentops_mcp/tools/: __init__.py  accounts.py  approvals.py  cases.py  cost.py  customers.py  evaluation.py  knowledge.py  observability.py  orders.py  returns.py  shipments.py
mcp-server/tests/: conftest.py  test_accounts.py  test_approvals.py  test_cases.py  test_config.py  test_cost.py  test_customers.py  test_dataverse_mode.py  test_evaluation.py  test_knowledge.py  test_mock_data_service.py  test_observability.py  test_orders.py  test_returns.py  test_service_bus_service.py  test_shipments.py
(+76 files in other folders)
