[project]
name = "enterprise-agentops-mcp"
version = "0.1.0"
description = "Enterprise AgentOps MCP Server governed enterprise tool layer"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "fastmcp>=0.1.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "azure-search-documents>=11.4.0",
    "azure-identity>=1.17.0",
    "azure-monitor-opentelemetry>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "msal>=1.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
